<resources>
    <string name="app_name">Rock Paper Scissors</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions: select rock, paper or scissors to play.</string>
    <string name="versus">V.S.</string>
    <string name="win">Winner!</string>
    <string name="draw">Draw…</string>
    <string name="lose">Loser!</string>
    <string name="stat_title">Your all time statistics</string>
    <string name="stats">Win: %d  Draw: %d  Lose: %d</string>
    <string name="facebook_app_id">416983326001658</string> <string name="fb_login_protocol_scheme">fb416983326001658</string>

    <string name="computer">Computer</string>
    <string name="player">You</string>
    <string name="history_title">Your Game History</string>
</resources>
