<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="#781F1F"
    tools:context=".ui.MatchActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/welcome"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHowto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/instructions"
        android:textColor="#fff"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:textColor="#fff"
        android:layout_height="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHowto" />

    <TextView
        android:id="@+id/tvScoreTitle"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/stat_title"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:textColor="#fff"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvScoreTitle"
        tools:text="score" />

    <ImageButton
        android:id="@+id/ibRock"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:src="@drawable/rock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibPaper"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/ibPaper"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:src="@drawable/paper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibScissors"
        app:layout_constraintStart_toEndOf="@+id/ibRock"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/ibScissors"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:src="@drawable/scissors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ibPaper"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ivComputer"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/tvVersus"
        app:layout_constraintEnd_toStartOf="@+id/tvVersus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvVersus"
        app:srcCompat="@drawable/rock"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvComputer"
        android:layout_width="wrap_content"
        android:textColor="#fff"
        android:layout_height="wrap_content"
        android:text="@string/computer"
        app:layout_constraintEnd_toEndOf="@+id/ivComputer"
        app:layout_constraintStart_toStartOf="@+id/ivComputer"
        app:layout_constraintTop_toBottomOf="@+id/ivComputer" />

    <TextView
        android:id="@+id/tvVersus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/versus"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/ibPaper"
        app:layout_constraintEnd_toStartOf="@+id/ivPlayer"
        app:layout_constraintStart_toEndOf="@+id/ivComputer"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <ImageView
        android:id="@+id/ivPlayer"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/tvVersus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvVersus"
        app:layout_constraintTop_toTopOf="@+id/tvVersus"
        app:srcCompat="@drawable/rock"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvPlayer"
        android:layout_width="wrap_content"
        android:textColor="#fff"
        android:layout_height="wrap_content"
        android:text="@string/player"
        app:layout_constraintEnd_toEndOf="@+id/ivPlayer"
        app:layout_constraintStart_toStartOf="@+id/ivPlayer"
        app:layout_constraintTop_toBottomOf="@+id/ivPlayer" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:layout_marginBottom="@android:dimen/notification_large_icon_height"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvVersus"
        app:layout_constraintEnd_toStartOf="@+id/ivPlayer"
        app:layout_constraintStart_toEndOf="@+id/ivComputer"
        tools:text="result" />



</androidx.constraintlayout.widget.ConstraintLayout>