<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ivComputer"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/tvVersus"
        app:layout_constraintEnd_toStartOf="@+id/tvVersus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvVersus"
        app:srcCompat="@drawable/rock"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ivPlayer"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/tvVersus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvVersus"
        app:layout_constraintTop_toTopOf="@+id/tvVersus"
        app:srcCompat="@drawable/rock"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvComputer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/computer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ivComputer"
        app:layout_constraintStart_toStartOf="@+id/ivComputer"
        app:layout_constraintTop_toBottomOf="@+id/ivComputer" />

    <TextView
        android:id="@+id/tvVersus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/versus"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ivPlayer"
        app:layout_constraintStart_toEndOf="@+id/ivComputer"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    <TextView
        android:id="@+id/tvPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ivPlayer"
        app:layout_constraintStart_toStartOf="@+id/ivPlayer"
        app:layout_constraintTop_toBottomOf="@+id/ivPlayer" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/tvResult"
        app:layout_constraintStart_toStartOf="@+id/tvResult"
        app:layout_constraintTop_toBottomOf="@+id/tvResult"
        tools:text="date" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="result" />
</androidx.constraintlayout.widget.ConstraintLayout>